--- a/Models/NERModel/NamedEntityExtractionModel.ipynb
+++ b/Models/NERModel/NamedEntityExtractionModel.ipynb
@@ -201,8 +201,8 @@
       },
       "outputs": [],
       "source": [
-        "kaggle_json = {\"username\":\"adikandakurtikar\",\n",
-        "               \"key\":\"47670635e16d9df232f373db8a142678\"}\n",
+        "kaggle_json = {\"username\":\"\",\n",
+        "               \"key\":\"\"}\n",
         "\n",
         "with open('kaggle.json', 'w') as fp:\n",
         "    json.dump(kaggle_json, fp)"
