job related model

--- a/Models/JobNotJobModel/JobClassification.ipynb
+++ b/Models/JobNotJobModel/JobClassification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import spacy\n",
-    "import pickle\n",
+    "import joblib\n",
     "import boto3\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -581,21 +581,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Thank you for applying to the Junior Software Developer position at MSC Technology.\\nUnfortunately, MSC Technology has moved to the next step in their hiring process, and your application was not selected at this time.'"
+       "array(['Yes', 'Yes', 'Yes'], dtype='<U3')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "model_pipeline = Pipeline([\n",
+    "    ('TFIDF', TfidfVectorizer()),\n",
+    "    ('DenseTransformer', MultinomialNB()),\n",
+    "])\n",
+    "\n",
+    "model_pipeline.fit(job_data['Email'], job_data['Job_Related'])\n",
+    "\n",
+    "\n",
+    "model_pipeline.predict(job_data['Email'].values[0:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_pipeline = Pipeline([\n",
+    "    ('TFIDF', TfidfVectorizer()),\n",
+    "    ('DenseTransformer', MultinomialNB()),\n",
+    "])\n",
+    "\n",
+    "model_pipeline.fit(job_data['Email'], job_data['Job_Related'])\n",
+    "\n",
+    "with open(\"Job_related_Model.joblib\", \"wb\") as f:\n",
+    "    joblib.dump(model_pipeline, f)\n",
+    "\n",
+    "s3_client = boto3.client(\"s3\")\n",
+    "s3_client.upload_file(\"Job_related_Model.joblib\", '', 'Job_related_Model.joblib')"
+   ]
   },
   {
    "cell_type": "code",
